[gd_scene format=3 uid="uid://dfk1u167k118f"]

[ext_resource type="Texture2D" uid="uid://cub8r65n07vuh" path="res://assets/scenario/BG Image.png" id="1_hm8o7"]
[ext_resource type="Texture2D" uid="uid://dejd5xo7quvvi" path="res://assets/scenario/Small Cloud 1.png" id="2_t6bgy"]
[ext_resource type="Texture2D" uid="uid://b3menrv6wfj4j" path="res://assets/scenario/Small Cloud 2.png" id="3_qejhp"]
[ext_resource type="Texture2D" uid="uid://x4hvr0wh86ub" path="res://assets/scenario/Small Cloud 3.png" id="4_82u8h"]
[ext_resource type="Texture2D" uid="uid://dtt8fir3152vs" path="res://assets/ggj/arena/Ringue3.png" id="5_82u8h"]
[ext_resource type="Script" uid="uid://bjlcbt2uayrux" path="res://scripts/player_controller.gd" id="5_sg72k"]
[ext_resource type="Texture2D" uid="uid://ckjvfkfns3w2n" path="res://assets/ggj/characters/Lucha teste.png" id="6_lvhds"]
[ext_resource type="Texture2D" uid="uid://bgwp8in7cwg23" path="res://assets/ggj/arena/Ringue2.png" id="6_sg72k"]
[ext_resource type="Script" uid="uid://diyhc7vxrjdqs" path="res://scripts/enemy_controller.gd" id="7_iee5v"]
[ext_resource type="Texture2D" uid="uid://cw1p84pq1lydl" path="res://assets/ggj/arena/Ringue1.png" id="7_lvhds"]
[ext_resource type="Texture2D" uid="uid://dfrfwajn6r756" path="res://assets/ggj/arena/Ringue0.png" id="8_iee5v"]
[ext_resource type="PackedScene" uid="uid://cj5tgbqd75l7i" path="res://scenes/audio/bg_music.tscn" id="8_k6ngn"]
[ext_resource type="PackedScene" uid="uid://dbjos3mli8bp1" path="res://scenes/upgrade_screen/upgrade_screen_ui.tscn" id="9_hue6m"]
[ext_resource type="Script" uid="uid://dxebigt7g3ogw" path="res://scripts/node_2d.gd" id="9_t6bgy"]
[ext_resource type="PackedScene" uid="uid://nwgjlpe5s7ju" path="res://scenes/managers/audio_manager.tscn" id="11_qejhp"]
[ext_resource type="PackedScene" uid="uid://dt0s3dg8ps1hm" path="res://scenes/hud_ui.tscn" id="12_q25hy"]
[ext_resource type="Resource" uid="uid://d4acu4lbn01eo" path="res://resources/attacks/base_attack.tres" id="14_p7ajv"]
[ext_resource type="Script" uid="uid://q6ejma4g3xha" path="res://scripts/enemy_behaviour/follow_player_component.gd" id="17_q25hy"]
[ext_resource type="Script" uid="uid://byd3mu742fon2" path="res://scripts/status_manager.gd" id="18_uvyt4"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4pen5"]
distance = -59.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nqaof"]
atlas = ExtResource("6_lvhds")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsmcr"]
atlas = ExtResource("6_lvhds")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w0qj"]
atlas = ExtResource("6_lvhds")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrlbp"]
atlas = ExtResource("6_lvhds")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbvxl"]
atlas = ExtResource("6_lvhds")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rcpp"]
atlas = ExtResource("6_lvhds")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p621i"]
atlas = ExtResource("6_lvhds")
region = Rect2(192, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_y8le8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqaof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsmcr")
}],
"loop": false,
"name": &"attack_1",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w0qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrlbp")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbvxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rcpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p621i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rcpp")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4f5gu"]
radius = 21.65

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5mfrn"]
radius = 18.0
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_t7jgb"]
atlas = ExtResource("6_lvhds")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhdim"]
atlas = ExtResource("6_lvhds")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51pxr"]
atlas = ExtResource("6_lvhds")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hivil"]
atlas = ExtResource("6_lvhds")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8wcq"]
atlas = ExtResource("6_lvhds")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgs0j"]
atlas = ExtResource("6_lvhds")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxtvr"]
atlas = ExtResource("6_lvhds")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vo1e"]
atlas = ExtResource("6_lvhds")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_irfdn"]
atlas = ExtResource("6_lvhds")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvd5k"]
atlas = ExtResource("6_lvhds")
region = Rect2(192, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4312q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7jgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhdim")
}],
"loop": false,
"name": &"attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_51pxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hivil")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8wcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgs0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxtvr")
}],
"loop": false,
"name": &"take_damage",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vo1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irfdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvd5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irfdn")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qs7tr"]
radius = 24.0
height = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1os67"]
radius = 51.51

[node name="Node2D" type="Node2D" unique_id=910699420]

[node name="Background" type="Node2D" parent="." unique_id=1966169131]

[node name="BgImage" type="Sprite2D" parent="Background" unique_id=446182433]
self_modulate = Color(0.73300546, 0.7330054, 0.7330054, 1)
position = Vector2(6.1035156e-05, -7.999878)
rotation = -3.1415925
scale = Vector2(4, 4)
texture = ExtResource("1_hm8o7")

[node name="SmallCloud1" type="Sprite2D" parent="Background" unique_id=1010375115]
position = Vector2(-177, -153)
texture = ExtResource("2_t6bgy")

[node name="SmallCloud2" type="Sprite2D" parent="Background" unique_id=1771687975]
position = Vector2(1, -117)
texture = ExtResource("3_qejhp")

[node name="SmallCloud3" type="Sprite2D" parent="Background" unique_id=2129280720]
position = Vector2(154, -131)
texture = ExtResource("4_82u8h")

[node name="StaticBody2D" type="StaticBody2D" parent="Background" unique_id=1548136722]
position = Vector2(6, -39)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D" unique_id=1520286686]
rotation = -3.1415925
shape = SubResource("WorldBoundaryShape2D_4pen5")

[node name="Arena" type="Sprite2D" parent="Background" unique_id=1489520942]
texture = ExtResource("5_82u8h")

[node name="Ring" type="Node2D" parent="." unique_id=1679391080]

[node name="RingFloor" type="Sprite2D" parent="Ring" unique_id=63989682]
texture = ExtResource("6_sg72k")

[node name="Bar" type="Sprite2D" parent="Ring" unique_id=1061886013]
position = Vector2(1, -1)
texture = ExtResource("7_lvhds")

[node name="Bar2" type="Sprite2D" parent="Ring" unique_id=75761661]
texture = ExtResource("8_iee5v")

[node name="Camera2D" type="Camera2D" parent="." unique_id=566050864]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=764626952]
layer = 2

[node name="Node2D" type="Node2D" parent="CanvasLayer" unique_id=230651941]
position = Vector2(24, 28)
script = ExtResource("9_t6bgy")

[node name="UpgradeScreen" parent="CanvasLayer/Node2D" unique_id=1770530853 instance=ExtResource("9_hue6m")]
offset_left = 289.0
offset_top = 139.0
offset_right = 289.0
offset_bottom = 139.0
scale = Vector2(0.86038417, 0.8296713)

[node name="HUD" type="CanvasLayer" parent="." unique_id=296406748]

[node name="HudUi" parent="HUD" unique_id=2081104197 instance=ExtResource("12_q25hy")]
mouse_filter = 2

[node name="AudioManager" parent="." unique_id=1384929976 instance=ExtResource("11_qejhp")]

[node name="Player" type="CharacterBody2D" parent="." unique_id=433286735 groups=["player"]]
position = Vector2(-184, -30)
collision_layer = 2
collision_mask = 3
script = ExtResource("5_sg72k")
speed = 80.0
direction_multiplier = Vector2(1, 1)
base_attack = ExtResource("14_p7ajv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player" unique_id=1899895638]
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_y8le8")
animation = &"attack_1"
autoplay = "idle"

[node name="CollisionShape" type="CollisionShape2D" parent="Player" unique_id=215787385]
shape = SubResource("CircleShape2D_4f5gu")

[node name="AttackArea" type="Area2D" parent="Player" unique_id=312619710]
position = Vector2(21, 3)
collision_mask = 5
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AttackArea" unique_id=1733825845]
position = Vector2(11, 0)
shape = SubResource("CapsuleShape2D_5mfrn")
debug_color = Color(0.6313726, 0.52156866, 0.03137255, 0.41960785)

[node name="CrabbyEnemy" type="CharacterBody2D" parent="." unique_id=487904858]
position = Vector2(140, -37)
collision_layer = 4
script = ExtResource("7_iee5v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CrabbyEnemy" unique_id=364250294]
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_4312q")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrabbyEnemy" unique_id=1621762072]
shape = SubResource("CapsuleShape2D_qs7tr")

[node name="FollowPlayerComponent" type="Node" parent="CrabbyEnemy" unique_id=1473206024]
script = ExtResource("17_q25hy")
stop_distance = 50.0
attack_range = 51.0
attack_cooldown = 4.0
metadata/_custom_type_script = "uid://q6ejma4g3xha"

[node name="StatusManager" type="Node" parent="CrabbyEnemy" unique_id=1033903376]
script = ExtResource("18_uvyt4")
metadata/_custom_type_script = "uid://byd3mu742fon2"

[node name="AttackArea" type="Area2D" parent="CrabbyEnemy" unique_id=1122944501]
position = Vector2(21, 3)
collision_mask = 3
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrabbyEnemy/AttackArea" unique_id=1438549756]
position = Vector2(4, 0)
shape = SubResource("CapsuleShape2D_5mfrn")
debug_color = Color(0.6313726, 0.52156866, 0.03137255, 0.41960785)

[node name="SeparationArea" type="Area2D" parent="CrabbyEnemy" unique_id=1160988473]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrabbyEnemy/SeparationArea" unique_id=701910878]
shape = SubResource("CircleShape2D_1os67")
debug_color = Color(0.7154605, 0.35144556, 0.83996785, 0.41960785)

[node name="CrabbyEnemy2" type="CharacterBody2D" parent="." unique_id=1400848842]
position = Vector2(50, -13)
collision_layer = 4
script = ExtResource("7_iee5v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CrabbyEnemy2" unique_id=1507645737]
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_4312q")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrabbyEnemy2" unique_id=2057410229]
shape = SubResource("CapsuleShape2D_qs7tr")

[node name="FollowPlayerComponent" type="Node" parent="CrabbyEnemy2" unique_id=1367486679]
script = ExtResource("17_q25hy")
stop_distance = 50.0
attack_range = 51.0
attack_cooldown = 4.0
metadata/_custom_type_script = "uid://q6ejma4g3xha"

[node name="StatusManager" type="Node" parent="CrabbyEnemy2" unique_id=440039635]
script = ExtResource("18_uvyt4")
metadata/_custom_type_script = "uid://byd3mu742fon2"

[node name="AttackArea" type="Area2D" parent="CrabbyEnemy2" unique_id=4321646]
position = Vector2(21, 3)
collision_mask = 3
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrabbyEnemy2/AttackArea" unique_id=993651026]
position = Vector2(4, 0)
shape = SubResource("CapsuleShape2D_5mfrn")
debug_color = Color(0.6313726, 0.52156866, 0.03137255, 0.41960785)

[node name="SeparationArea" type="Area2D" parent="CrabbyEnemy2" unique_id=1026826369]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrabbyEnemy2/SeparationArea" unique_id=1741356420]
shape = SubResource("CircleShape2D_1os67")
debug_color = Color(0.7154605, 0.35144556, 0.83996785, 0.41960785)

[node name="MusicPlayer" parent="." unique_id=232662493 instance=ExtResource("8_k6ngn")]
volume_db = -10.0

[connection signal="animation_finished" from="Player/AnimatedSprite2D" to="Player" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Player/AttackArea" to="Player" method="_on_attack_area_body_entered"]
[connection signal="animation_finished" from="CrabbyEnemy/AnimatedSprite2D" to="CrabbyEnemy" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="CrabbyEnemy2/AnimatedSprite2D" to="CrabbyEnemy2" method="_on_animated_sprite_2d_animation_finished"]
